# PaperTrack

./: .gitignore  README.md  arxiv_update.py  main.py  pyproject.toml  run.sh
src/ArXiv_Tools/: categories.toml  cli.py  codex.py  report.py  zotero_query.py
src/papertrack/: acs_fetch.py  acs_loi.py  aip_fetch.py  arxiv_entry.py  arxiv_index_fetch.py  categories.toml  cli.py  codex.py  crossref_loi.py  journal_entry.py  journal_fetch.py  report.py  zotero_query.py
src/papertrack/templates/: journal_paper.md.j2  journal_report.md.j2  paper.md.j2  report.md.j2
tests/: __init__.py  test_journal.py  test_report.py
