[project]
name = "arxiv-reading"
version = "0.1.0"
description = "Auto-fetch arXiv to Markdown"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Cunxi Gong", email="ansatzMe@outlook.com" },
]
dependencies = [
    'pyzotero',
    'bs4',
    'lxml',
    'feedparser',
    'jinja2>=3.0',
    'tomli>=1.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.1",
]

[project.scripts]
arxiv-update = "ArXiv_Tools.cli:main"

[project.urls]
Homepage = "https://github.com/ansatzX/arxiv_tools"

[tool.setuptools]
packages = ["ArXiv_Tools"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ArXiv_Tools = ["templates/*.j2", "categories.toml"]
