[project]
name = "papertrack"
version = "0.1.0"
description = "Track papers from arXiv and journals, cross-check Zotero, generate Obsidian reports"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="Cunxi Gong", email="ansatzMe@outlook.com" },
]
dependencies = [
    'pyzotero',
    'bs4',
    'lxml',
    'feedparser',
    'jinja2>=3.0',
    'tomli>=1.0; python_version < "3.11"',
    'curl_cffi>=0.7',
    'requests>=2.20',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.1",
]

[project.scripts]
papertrack = "papertrack.cli:main"

[project.urls]
Homepage = "https://github.com/ansatzX/PaperTrack"

[tool.setuptools]
packages = ["papertrack"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
papertrack = ["templates/*.j2", "categories.toml"]
